--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,8 +99,7 @@
     <string name="last_seen_on">Last seen on %1$s</string>
     <string name="current_medications">Current Medications</string>
     <string name="medications_that_may_help">Medications That May Help</string>
-    <string name="color_key">Color key</string>
-    <string name="no_medications_to_show">No medications to show</string>
+    <string name="color_key_section_title">Legend</string>
     <string name="you_are_on_the_target_dose">You are on your target dose.</string>
     <string name="you_are_on_this_medication">You are on this medication, but it may benefit from a higher dose.</string>
     <string name="more_information_needed">More information is needed to make a recommendation.</string>
