--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,8 +99,7 @@
     <string name="last_seen_on">Last seen on %1$s</string>
     <string name="current_medications">Current Medications</string>
     <string name="medications_that_may_help">Medications That May Help</string>
-    <string name="color_key">Color key</string>
-    <string name="no_medications_to_show">No medications to show</string>
+    <string name="color_key_section_title">Legend</string>
     <string name="you_are_on_the_target_dose">You are on your target dose.</string>
     <string name="you_are_on_this_medication">You are on this medication, but it may benefit from a higher dose.</string>
     <string name="more_information_needed">More information is needed to make a recommendation.</string>
@@ -140,4 +139,20 @@
     <string name="qr_code_one_time_code">One-time code</string>
     <string name="qr_code_health_summary_button_title">View Health Summary</string>
     <string name="qr_code_summary_button_description">Alternatively, you can access your health summary here</string>
+    <string name="invalid_phone_number_message">The entered phone number is invalid</string>
+    <string name="phone_number_enter_placeholder_description">Enter your phone number</string>
+    <string name="enter_verification_code_title">Enter Verification Code</string>
+    <string name="enter_verification_code_description">Enter your 6 digit verification code you received via text message.</string>
+    <string name="verify_phone_number_button_title">Verify Phone Number</string>
+    <string name="send_verification_message_button_title">Send Verification Message</string>
+    <string name="search_your_country_placeholder">🔍 Search your country</string>
+    <string name="no_country_codes_found">No country codes found</string>
+    <string name="error_sending_verification_message_message">An error occurred sending the verification message</string>
+    <string name="error_checking_verification_code_message">An error occurred sending the verification code</string>
+    <string name="phone_number_verification_success_message">Phone number added successfully to your account.</string>
+    <string name="phone_numbers_title">Phone numbers</string>
+    <string name="phone_number_add">Add phone number</string>
+    <string name="phone_number_deletion_error_message">Unable to delete your phone number. Please try again. </string>
+    <string name="phone_number_verified_phone_numbers_header_title">Your phone numbers</string>
+    <string name="phone_number_empty_list_message">Your phone numbers will appear here once set up. Press (+) button to add a new phone number.</string>
 </resources>
